[desktop] cleanup, refactors, deprecation fixes